spade-tests/src/snapshots/spade_tests__typeinference__good_error_message_for_let_pattern_type_mismatch_with_implicit_type.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Pattern type mismatch
  ┌─ testinput:2:9
  │
2 │     let (x, y) = true;
  │         ^^^^^^   ---- because this has type bool
  │         │         
  │         expected bool
  │
  = Expected: bool
  =      Got: (_, _)


